argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: employee-frontend
  template:
    metadata:
      labels:
        app: employee-frontend
    spec:
      containers:
      - name: frontend-springboot
        image: yyazi/vue_crud_security
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
